Update spell check dictionary.

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,6 +3,8 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
+  - Apress
+  - Beningo
   - cyclomatic
   - extern
   - struct
