--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(c-programming-design-patterns VERSION 0.1.0)
 
+add_subdirectory(object-pattern/object-pattern-project)
 add_subdirectory(singleton/singleton-project-1)
 add_subdirectory(singleton/singleton-project-2)
