--- a/object-pattern/object-pattern-project/CMakeLists.txt
+++ b/object-pattern/object-pattern-project/CMakeLists.txt
@@ -4,7 +4,7 @@ project(singleton-project-1 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(object-pattern main.c)
+add_executable(object-pattern main.c example_object.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
