--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "C:/git_repos/c-programming-design-patterns"
+    "cmake.sourceDirectory": "C:/git_repos/c-programming-design-patterns",
+    "files.associations": {
+        "typeinfo": "c"
+    }
 }
