Add new project directory to top level Cmake.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(c-programming-design-patterns VERSION 0.1.0)
 add_subdirectory(object-pattern/object-pattern-project)
 add_subdirectory(singleton/singleton-project-1)
 add_subdirectory(singleton/singleton-project-2)
+add_subdirectory(opaque-pattern/opaque-pattern-project)
