--- a/opaque-pattern/opaque-pattern-project/CMakeLists.txt
+++ b/opaque-pattern/opaque-pattern-project/CMakeLists.txt
@@ -4,7 +4,7 @@ project(opaque-pattern-project VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(opaque-pattern main.c)
+add_executable(opaque-pattern main.c vehicle.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
