Add project using errno.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(object-pattern/object-pattern-project)
 add_subdirectory(singleton/singleton-project-1)
 add_subdirectory(singleton/singleton-project-2)
 add_subdirectory(opaque-pattern/opaque-pattern-project)
+add_subdirectory(return-value-pattern/return-value-pattern-project)
